<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="list_title">My Nanodegree Apps</string>
    <string name="app1">POPULAR MOVIES</string>
    <string name="app2">STOCK HAWK</string>
    <string name="app3">BUILD IT BIGGER</string>
    <string name="app4">MAKE YOUR APP MATERIAL</string>
    <string name="app5">GO UBIQUITOUS</string>
    <string name="app6">CAPSTONE</string>
    <string name="built_by">© Unnikrishnan Patel</string>
</resources>
