<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="50dp"
    tools:context="me.unnikrishnanpatel.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_title"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <Button
            style="@style/CustomButtonStyle"
            android:id="@+id/popMovie"
            android:text="@string/app1"
            android:layout_marginTop="15dp"/>
        <Button
            style="@style/CustomButtonStyle"
            android:id="@+id/stockHawk"
            android:text="@string/app2"/>
        <Button
            style="@style/CustomButtonStyle"
            android:id="@+id/buildItBigger"
            android:text="@string/app3"/>
        <Button
            style="@style/CustomButtonStyle"
            android:id="@+id/materialApp"
            android:text="@string/app4"/>
        <Button
            style="@style/CustomButtonStyle"
            android:id="@+id/goUbiquitious"
            android:text="@string/app5" />
        <Button
            style="@style/CustomButtonStyle"
            android:id="@+id/capstone"
            android:text="@string/app6" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/built_by"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
